--- a/src/TidyWindow.App/Resources/ComboBoxes.xaml
+++ b/src/TidyWindow.App/Resources/ComboBoxes.xaml
@@ -1,5 +1,6 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:infra="clr-namespace:TidyWindow.App.Infrastructure">
     <!-- Palette for the custom combo box experience -->
         <LinearGradientBrush x:Key="ComboBox.BackgroundBrush"
                                                  StartPoint="0,0"
@@ -123,20 +124,20 @@
             <Setter.Value>
                 <ControlTemplate TargetType="ToggleButton">
                                         <Border Background="Transparent"
-                                                        CornerRadius="12"
+                                                        CornerRadius="10"
                                                         Padding="0">
                                                 <Grid>
                                                         <Border x:Name="ArrowGlow"
-                                                                        Width="28"
-                                                                        Height="32"
-                                                                        Margin="0,4,6,4"
+                                                                        Width="24"
+                                                                        Height="28"
+                                                                        Margin="0,2,4,2"
                                                                         HorizontalAlignment="Right"
-                                                                        CornerRadius="14"
+                                                                        CornerRadius="12"
                                                                         Background="{StaticResource ComboBox.HighlightOverlayBrush}"
                                                                         Opacity="0"
                                                                         IsHitTestVisible="False"/>
                                                         <Grid x:Name="ArrowHost"
-                                                                  Width="36"
+                                                                  Width="30"
                                                                   HorizontalAlignment="Right"
                                                                   Background="Transparent">
                                                                 <Grid.RenderTransform>
@@ -147,7 +148,7 @@
                                                                 <Path x:Name="ArrowGlyph"
                                                                           Data="M 0 0 L 5 5 L 10 0"
                                                                           Stroke="{TemplateBinding Foreground}"
-                                                                          StrokeThickness="1.5"
+                                                                          StrokeThickness="1.4"
                                                                           StrokeStartLineCap="Round"
                                                                           StrokeEndLineCap="Round"
                                                                           HorizontalAlignment="Center"
@@ -386,6 +387,20 @@
            TargetType="ComboBox">
         <Setter Property="Foreground"
                 Value="#F8FAFC"/>
+        <Setter Property="UseLayoutRounding"
+                Value="True"/>
+        <Setter Property="TextOptions.TextFormattingMode"
+                Value="Display"/>
+        <Setter Property="TextOptions.TextRenderingMode"
+                Value="ClearType"/>
+        <Setter Property="TextOptions.TextHintingMode"
+                Value="Animated"/>
+        <Setter Property="RenderOptions.ClearTypeHint"
+                Value="Enabled"/>
+        <Setter Property="Stylus.IsPressAndHoldEnabled"
+                Value="False"/>
+        <Setter Property="Stylus.IsFlicksEnabled"
+                Value="False"/>
         <Setter Property="Background"
                 Value="{StaticResource ComboBox.BackgroundBrush}"/>
         <Setter Property="BorderBrush"
@@ -393,9 +408,9 @@
         <Setter Property="BorderThickness"
                 Value="1"/>
         <Setter Property="Padding"
-                Value="16,8,48,8"/>
+                Value="12,6,40,6"/>
         <Setter Property="MinHeight"
-                Value="36"/>
+                Value="32"/>
         <Setter Property="SnapsToDevicePixels"
                 Value="True"/>
         <Setter Property="HorizontalContentAlignment"
@@ -408,6 +423,8 @@
                 Value="{x:Null}"/>
         <Setter Property="ItemContainerStyle"
                 Value="{StaticResource App.ComboBoxItemStyle}"/>
+        <Setter Property="infra:ComboBoxBehaviors.EnableStickyPopup"
+                Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ComboBox">
@@ -418,38 +435,38 @@
                                                                         Background="{TemplateBinding Background}"
                                                                         BorderBrush="{TemplateBinding BorderBrush}"
                                                                         BorderThickness="{TemplateBinding BorderThickness}"
-                                                                        CornerRadius="14"
+                                                                        CornerRadius="10"
                                                                         SnapsToDevicePixels="True">
                                                                 <Border.Effect>
                                                                         <DropShadowEffect x:Name="SurfaceShadow"
                                                                                                           Color="#2F9BFF"
-                                                                                                          BlurRadius="14"
+                                                                                                          BlurRadius="10"
                                                                                                           ShadowDepth="0"
-                                                                                                          Opacity="0.18"/>
+                                                                                                          Opacity="0.14"/>
                                                                 </Border.Effect>
                                                         </Border>
                                                         <Border x:Name="HoverOverlay"
                                                                         Background="{StaticResource ComboBox.HighlightOverlayBrush}"
-                                                                        CornerRadius="14"
+                                                                        CornerRadius="10"
                                                                         Opacity="0"
                                                                         IsHitTestVisible="False"/>
                                                         <Border x:Name="SurfaceSheen"
-                                                                        Margin="2"
-                                                                        CornerRadius="12"
+                                                                        Margin="1"
+                                                                        CornerRadius="8"
                                                                         Background="{StaticResource ComboBox.SurfaceSheenBrush}"
                                                                         Opacity="0"
                                                                         IsHitTestVisible="False"/>
                                                         <Border x:Name="ActiveGlow"
-                                                                        Margin="-2"
-                                                                        CornerRadius="16"
+                                                                        Margin="-1"
+                                                                        CornerRadius="11"
                                                                         BorderBrush="{StaticResource ComboBox.FocusHaloBrush}"
-                                                                        BorderThickness="1.6"
+                                                                        BorderThickness="1.2"
                                                                         Opacity="0"
                                                                         IsHitTestVisible="False"/>
                                                         <Border x:Name="FocusBorder"
-                                                                        Margin="-3"
-                                                                        CornerRadius="18"
-                                                                        BorderThickness="2"
+                                                                        Margin="-2"
+                                                                        CornerRadius="12"
+                                                                        BorderThickness="1.5"
                                                                         BorderBrush="{StaticResource ComboBox.FocusBrush}"
                                                                         Opacity="0"
                                                                         IsHitTestVisible="False"/>
@@ -486,7 +503,7 @@
                                                                   MaxHeight="{TemplateBinding MaxDropDownHeight}">
                                                                 <Border x:Name="PopupGlow"
                                                                                 Background="{StaticResource ComboBox.HighlightOverlayBrush}"
-                                                                                CornerRadius="14"
+                                                                                CornerRadius="10"
                                                                                 Opacity="0"
                                                                                 Margin="0"
                                                                                 IsHitTestVisible="False"/>
@@ -494,7 +511,7 @@
                                                                                 Background="{StaticResource ComboBox.PopupBackgroundBrush}"
                                                                                 BorderBrush="{StaticResource ComboBox.PopupBorderBrush}"
                                                                                 BorderThickness="1"
-                                                                                CornerRadius="12"
+                                                                                CornerRadius="10"
                                                                                 Padding="6"
                                                                                 Opacity="0"
                                                                                 Effect="{StaticResource ComboBox.PopupShadow}">
@@ -506,8 +523,8 @@
                                                                         <Grid>
                                                                                 <Border x:Name="PopupSheen"
                                                                                                 Background="{StaticResource ComboBox.SurfaceSheenBrush}"
-                                                                                                CornerRadius="10"
-                                                                                                Margin="2"
+                                                                                                CornerRadius="8"
+                                                                                                Margin="1"
                                                                                                 Opacity="0"
                                                                                                 IsHitTestVisible="False"/>
                                                                                 <ScrollViewer Margin="0"
